# PersonaForge

./: .aider.conf.yml  .coderabbit.yaml  .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  genesis.py  mock_agent_script.py  pre-commit-config.yaml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yml  snyk.yaml
src/personaforge/: __init__.py  __main__.py  fidelity_guard.py  genesis.py  models.py  orchestrator.py  precision_refiner.py  sanitizer.py  utils.py
tests/: __init__.py  conftest.py  test_fidelity_guard.py  test_genesis.py  test_orchestrator.py  test_precision_refiner.py  test_sanitizer.py  test_utils.py
